# rust-practice

./: .gitignore  Cargo.toml  LICENSE  README.md  Research.ipynb  Untitled.ipynb  bookreview.rs  equations.ipynb  graphs.ipynb
src/: aoc_2019_day2.rs  aoc_2019_day5.rs  aoc_2019_day5_soln.rs  closure-cacher.rs  coinjar.rs  generics_traits.rs  lib.rs  main.rs  my-own-add-trait.rs  processes.rs  smart-pointer.rs  string-lifetimes.rs
src/minigrep/: lib.rs  main.rs
src/sorting/: bubble_sort.rs  insertion_sort.rs  merge_sort.rs  mod.rs
