[package]
name = "learning0"
version = "0.1.0"
authors = ["Tejas Sanap <sanap.tejas@gmail.com>"]
edition = "2018"
repository = "https://github.com/whereistejas/rust-practice"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [dependencies]
# num = "*"
# argmin = "*"
